Form: fix icon spacings

--- a/src/index.css
+++ b/src/index.css
@@ -63,7 +63,6 @@
     margin-right: 0.5em;
     border: 1px solid currentColor;
     border-radius: 50%;
-    transform: translateY(-0.075em);
     display: grid;
     place-content: center;
   }
@@ -76,7 +75,6 @@
     background: red;
     border-radius: 50%;
     transform: scale(0);
-    /* transition: 40ms transform ease-in-out; */
     @apply bg-primary dark:bg-primary-dark;
   }
 
